--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,6 +1,7 @@
 ﻿@page "/fetchdata"
 
-@using TodoList.Data
+@using TodoList.Services
+@using TodoList.Models
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
