--- a/Pages/Todo.razor
+++ b/Pages/Todo.razor
@@ -1,29 +1,14 @@
 ﻿@page "/todo"
+@inherits TodoList.Components.TodoList
 
-    <h3>Todo (@todos.Count(todo => !todo.IsDone))</h3>
+<h3>Todo (@Todos.Count(todo => !todo.IsDone))</h3>
 
-<ul>
-    @foreach (var todo in todos)
-    {
-        <input type="checkbox" @bind="todo.IsDone" />
-        <input @bind="todo.Title" />
-    }
-</ul>
-
-<input placeholder="Something todo" @bind="newTodo"/>
-<button @onclick="AddTodo">Add todo</button>
-
-
-@code {
-    private IList<TodoItem> todos = new List<TodoItem>();
-    private string newTodo;
-
-    private void AddTodo()
-    {
-        if (!string.IsNullOrWhiteSpace(newTodo))
-        {
-            todos.Add(new TodoItem { Title = newTodo });
-            newTodo = string.Empty;
-        }
-    }
+@foreach (var todo in Todos)
+{
+    <input type="checkbox" @bind="todo.IsDone" />
+    <input @bind="todo.Title" />
+    <br/>
 }
+
+<input placeholder="Something todo" @bind="NewTodo"/>
+<button @onclick="AddTodo">Add todo</button>
