renaming from TodoList to LearningApp

--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -1,7 +1,7 @@
 ﻿@page "/fetchdata"
 
-@using TodoList.Services
-@using TodoList.Models
+@using LearningApp.Services
+@using LearningApp.Models
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
