--- a/Pages/Todo.razor
+++ b/Pages/Todo.razor
@@ -1,5 +1,5 @@
 ﻿@page "/todo"
-@inherits TodoList.Components.TodoList
+@inherits LearningApp.Components.TodoList
 
 <h3>Todo (@Todos.Count(todo => !todo.IsDone))</h3>
 
