--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,5 +1,5 @@
 ﻿@page "/counter"
-@inherits TodoList.Components.Counter
+@inherits LearningApp.Components.Counter
 <h1>Counter</h1>
 
 <p>Current count: @CurrentCount</p>
