--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello Blazor learner !</h1>
 
-Welcome to your new app.
+Welcome to Blazor learning app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<br />
+
+<a href="https://github.com/LouisCochinho/LearningApp">Github page</a>
