--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,12 +24,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="todo">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Todo
+                <span class="oi oi-task" aria-hidden="true"></span> Todo list
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="twowaydatabinding">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> TwoWayDataBinding
+                <span class="oi oi-dashboard" aria-hidden="true"></span> Data binding
             </NavLink>
         </li>
     </ul>
